[package]
name = "Algod"
version = "1.0.0"
edition = "2021"
authors = ["Dumbo-programmer"]
description = "Many types of rust algorithms and data-structures"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Dumbo-programmer/Algod"
categories = ["algorithms"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
